tests/sksl/errors/golden/BinaryTypeCoercion.glsl
### Compilation failed:

error: 11: type mismatch: '=' cannot operate on 'half', 'float'
error: 20: type mismatch: '=' cannot operate on 'half4', 'float4'
error: 27: type mismatch: '=' cannot operate on 'half4', 'float4'
error: 34: type mismatch: '=' cannot operate on 'half4', 'float4'
error: 41: type mismatch: '=' cannot operate on 'half4', 'float4'
error: 49: type mismatch: '=' cannot operate on 'half4', 'float4'
error: 56: type mismatch: '=' cannot operate on 'half4x4', 'float4x4'
error: 63: type mismatch: '*=' cannot operate on 'float4x4', 'float4'
8 errors
